
CHANGE HISTORY 
--------------

not yet  BJH  Release 10.81.00

              sldtoppm: -lib and -dir don't work - always says slide not
              found.  Broken in Netpbm 10.63 (June 2013).

              sldtoppm: fix bug: says AutoCAD slide file isn't an AutoCAD
              slide file.  Broken after Netpbm 10.26 (January 2005), but no
              later than 10.35 (August 2006).

17.09.30 BJH  Release 10.80.00

              pnmtopalm: Refuse to create a compressed image with more than 8
              bits per pixel.

              pbmtext, libnetpbm font facilities: allow glyphs in font files
              that have no bitmap data; just used for their advance value to
              code a space.

              pbmtext: Improve error message when there is a problem reading
              the font file.

              libnetpbm font facilities: consider font invalid if a glyph is
              more than 65536 pixels high or wide.

              ppmshadow: handle images with a black background and low
              contrast images (i.e. little difference between foreground and
              background).

              ppmbrighten: fix bug: red pixels change hue.  Introduced in
              after Netpbm 10.11 (October 2002) and before Netpbm 10.18
              (September 2003).

              palmtopnm: fix crash if invalid input contains color index that
              is not in the palette.  Always broken (palmtopnm was new in
              Netpbm 9.10 (October 2001)).

              pnmtopalm: fix incorrect output with certain input files and
              -packbits_compression.  Always broken.  -packbits_compression
              was new in Netpbm 10.27 (March 2005).

              pnmtopalm: Correct error message recommending running
              pnmquant when the real solution is to run pnmremap to modify the
              image to Palm standard colors.

              pnmtopalm: Fix bug causing "color not in colormap" failure with